--- a/src/app/players/player-list/player-list.component.html
+++ b/src/app/players/player-list/player-list.component.html
@@ -1,14 +1,27 @@
 <div class="row">
     <div class="col-md-5">
       <h2>Players</h2>
-      <ul class="list-group">
+      <table>
+        <tr>
+          <th *ngFor="let col of columns">
+            {{col}}
+          </th>
+        </tr>
+        <tr *ngFor="let player of players">
+          <td *ngFor="let col of keyColumns">
+            {{player[col]}}
+          </td>
+        </tr>
+      </table>
+
+      <!-- <ul class="list-group">
         <li class="list-group-item"
           *ngFor="let player of players"
           (click)="selectPlayer(player)"
           [class.active]="player === selectedPlayer">
           {{player.name}}
         </li>
-      </ul>
+      </ul> -->
       <button class="btn btn-warning" (click)="createNewPlayer()">New</button>
     </div>
     <div class="col-md-5 col-md-offset-2">
