--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<div class="container">
-  <player-list></player-list>
-</div>
+<!-- <button mat-raised-button class="log-btn" (click)="logout()">Logout</button> -->
+
+<mat-tab-group animationDuration="0ms">
+  <mat-tab label="Players">
+    <div class="container">
+        <player-list></player-list>
+    </div>
+  </mat-tab>
+  <mat-tab label="Games">
+    <div>
+
+    </div>
+  </mat-tab>
+</mat-tab-group>
