--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 .form {
     border: 1px solid black;
     padding: 10px;
@@ -5,14 +7,35 @@
 }
 
 table {
-    border: 1px solid black;
-    border-collapse: collapse;
-    /* width: 100%; */
-    margin: 10px;
+    width: 100%;
 }
 
-th, td {
-    border: 1px solid black;
-    padding: 10px;
-    text-align: left;
+.log-btn {
+    float: right;
 }
+
+.mat-form-field {
+    font-size: 14px;
+    width: 100%;
+}
+
+.search {
+    width: 70%;
+}
+
+.add-btn {
+    align-content: right; 
+    height: 40px;   
+}
+
+.search-add{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+/* 
+.cancel-btn {
+    margin-left: 5px;
+} */
+
