--- a/src/app/players/player-list/player-list.component.html
+++ b/src/app/players/player-list/player-list.component.html
@@ -47,7 +47,8 @@
         <td mat-cell *matCellDef="let player">
             <button mat-button color="primary" (click)="updatePlayer(player)">Update</button>
             <button mat-button color="warn" (click)="deletePlayer(player._id)">Delete</button>
-            <button mat-button color="warn" (click)="joingame(player._id)">Join Game</button>
+            
+            <button *ng-if="player.status=='Available'" mat-button color="warn" (click)="joingame(player._id)">Join Game</button>
         </td>
     </ng-container>
   
