--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,19 @@
-<!-- <button mat-raised-button class="log-btn" (click)="logout()">Logout</button> -->
-
-<mat-tab-group animationDuration="0ms">
-  <mat-tab label="Players">
-    <div class="container">
+<div class="container">
+  <mat-tab-group animationDuration="0ms">
+    <mat-tab label="Players" class="menu">
+      <div class="container">
         <player-list></player-list>
-    </div>
-  </mat-tab>
-  <mat-tab label="Games">
-    <div>
-
-    </div>
-  </mat-tab>
-</mat-tab-group>
+      </div>
+    </mat-tab>
+    <mat-tab label="Games" class="menu">
+      <div class="container">
+        <game-list></game-list>
+      </div>
+    </mat-tab>
+    <mat-tab disabled>
+      <ng-template mat-tab-label>
+          <login-button></login-button>
+      </ng-template>
+      </mat-tab>
+  </mat-tab-group>
+</div>
