--- a/src/app/games/game-list/game-list.component.html
+++ b/src/app/games/game-list/game-list.component.html
@@ -1,1 +1,47 @@
-<p>game-list works!</p>
+
+
+<table *ngIf="games" [dataSource]="dataSource" class="mat-elevation-z8">
+    
+    <!--Title Column-->
+    <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef>Title</th>
+        <td mat-cell *matCellDef="let game">{{game.title}}</td>
+    </ng-container>
+    
+    <!--Platform Column-->
+    <ng-container matColumnDef="platform">
+            <th mat-header-cell *matHeaderCellDef>Platform</th>
+            <td mat-cell *matCellDef="let game">{{game.platform}}</td>
+    </ng-container>
+    
+    
+    <!--Genre Column-->
+    <ng-container matColumnDef="genre">
+            <th mat-header-cell *matHeaderCellDef>Genre</th>
+            <td mat-cell *matCellDef="let game">{{game.genre}}</td>
+    </ng-container>
+    
+    <!--Rating Column-->
+    <ng-container matColumnDef="rating">
+            <th mat-header-cell *matHeaderCellDef>Rating</th>
+            <td mat-cell *matCellDef="let game">{{game.rating}}</td>
+    </ng-container>
+    
+    <!--Publisher Column-->
+    <ng-container matColumnDef="publisher">
+            <th mat-header-cell *matHeaderCellDef>Publisher</th>
+            <td mat-cell *matCellDef="let game">{{game.publisher}}</td>
+    </ng-container>
+    
+    <!--Release Column-->
+    <ng-container matColumnDef="release">
+            <th mat-header-cell *matHeaderCellDef>Release</th>
+            <td mat-cell *matCellDef="let game">{{game.release}}</td>
+    </ng-container>
+    
+    <!--Status Column-->
+    <ng-container matColumnDef="status">
+            <th mat-header-cell *matHeaderCellDef>Status</th>
+            <td mat-cell *matCellDef="let game">{{game.status}}</td>
+    </ng-container>
+</table>
