--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,6 @@
-<div class="container">
-  <mat-tab-group animationDuration="0ms">
-    <mat-tab label="Players" class="menu">
-      <div class="container">
-        <player-list></player-list>
-      </div>
-    </mat-tab>
-    <mat-tab label="Games" class="menu">
-      <div class="container">
-        <game-list></game-list>
-      </div>
-    </mat-tab>
-    <mat-tab disabled>
-      <ng-template mat-tab-label>
-          <login-button></login-button>
-      </ng-template>
-      </mat-tab>
-  </mat-tab-group>
-</div>
+<h1>{{title}}</h1>
+<nav>
+  <a routerLink="/gameList">Games</a>
+  <a routerLink="/playerList">Players</a>
+</nav>
+<router-outlet></router-outlet>
