--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<h1>{{title}}</h1>
+<!-- <h1>{{title}}</h1>
+<button mat-raised-button color="primary" routerLink="login">Login</button>
 <nav>
   <a routerLink="/gameList">Games</a>
   <a routerLink="/playerList">Players</a>
-</nav>
+</nav> -->
+<dashboard></dashboard>
 <router-outlet></router-outlet>
