--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,31 +1,8 @@
-<!-- <div class="container">
-  <mat-tab-group animationDuration="0ms">
-    <mat-tab label="Players" class="menu">
-      <div class="container" routerLink="/playerList">
-        <player-list></player-list>
-      </div>
-    </mat-tab>
-    <mat-tab label="Games" class="menu">
-      <div class="container" routerLink="/gameList">
-        <game-list></game-list>
-      </div>
-    </mat-tab>
-    <mat-tab disabled>
-      <ng-template mat-tab-label>
-        <button mat-raised-button color="primary" routerLink="/login">Login</button>
-      </ng-template>
-      </mat-tab>
-  </mat-tab-group>
-  <admin-login
-    [loginHandler]="login">
-  </admin-login>
-</div> -->
-
-
-<!-- <h1>{{title}}</h1>
-<nav>
-  <a routerLink="/gameList">Games</a>
-  <a routerLink="/playerList">Players</a>
-</nav>
-<router-outlet></router-outlet> -->
+<div class="container">
+  <nav mat-tab-nav-bar animationDuration="0ms">
+    <a mat-tab-link routerLink='/playerList'>Players</a>
+    <a mat-tab-link routerLink='/gameList'>Games</a>
+    <a mat-tab-link routerLink='/login'>Login</a>
+  </nav>
+</div>
 
