--- a/src/app/games/game-list/game-list.component.html
+++ b/src/app/games/game-list/game-list.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="search-add">
   <mat-form-field class="search">
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
@@ -50,3 +51,4 @@
             <td mat-cell *matCellDef="let game">{{game.status}}</td>
     </ng-container>
 </table>
+</div>
