--- a/src/app/users/admin-login/admin-login.component.html
+++ b/src/app/users/admin-login/admin-login.component.html
@@ -1,5 +1,6 @@
-<div *ngIf="player" class="form">
-    <div *ngIf="player" class="row">
+<div class="container">
+<div class="form">
+    <div class="row">
         <div class="col-md-12">
             <h2>Administrator Login</h2>
         </div>
@@ -7,15 +8,16 @@
     <div class="row">
         <form class="col-md-12">
         <div class="form-group">
-            <label for="player-name">Username</label>
+            <label for="username">Username</label>
             <input class="form-control" name="username" />
         </div>
         <div class="form-group">
-            <label for="player-rank">Password</label>
-            <input type="password" class="form-control" />
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="password" />
         </div>
         <button mat-raised-button color="primary" (click)="login(user)">Login</button>
         </form>
     </div>
+</div>
 </div>
       
