--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<!-- <h1>{{title}}</h1>
-<button mat-raised-button color="primary" routerLink="login">Login</button>
-<nav>
-  <a routerLink="/gameList">Games</a>
-  <a routerLink="/playerList">Players</a>
-</nav> -->
-<dashboard></dashboard>
+<div class='container'>
+  <div class="title-button-container">
+    <h1 class="title">{{title}}</h1>
+    <button mat-raised-button color="primary" routerLink="login" class="button">Login</button>
+  </div>
+</div>
 <router-outlet></router-outlet>
