--- a/src/app/games/game-list/game-list.component.html
+++ b/src/app/games/game-list/game-list.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+<dashboard></dashboard>
 <div class="search-add">
   <mat-form-field class="search">
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
