--- a/src/app/games/game-list/game-list.component.html
+++ b/src/app/games/game-list/game-list.component.html
@@ -50,6 +50,9 @@
             <th mat-header-cell *matHeaderCellDef>Status</th>
             <td mat-cell *matCellDef="let game">{{game.status}}</td>
     </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 
 <div class="col-md-5 col-md-offset-2">
