--- a/src/app/games/game-list/game-list.component.html
+++ b/src/app/games/game-list/game-list.component.html
@@ -52,6 +52,15 @@
             <td mat-cell *matCellDef="let game">{{game.status}}</td>
     </ng-container>
 
+      <!-- Actions Column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let game">
+            <button mat-button color="primary" (click)="updateGame(game)">Update</button>
+            <button mat-button color="warn" (click)="deleteGame(game._id)">Delete</button>
+        </td>  
+        </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
