--- a/src/app/games/game-list/game-list.component.html
+++ b/src/app/games/game-list/game-list.component.html
@@ -4,7 +4,7 @@
   <mat-form-field class="search">
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
   </mat-form-field>
-  <button mat-raised-button class="add-btn" (click)="createNewGame()">Add New Game</button>
+  <button mat-raised-button class="add-btn" routerLink="/addGame">Add New Game</button>
 </div>
 
 <table mat-table *ngIf="games" [dataSource]="dataSource" class="mat-elevation-z8">
@@ -17,60 +17,50 @@
     
     <!--Platform Column-->
     <ng-container matColumnDef="platform">
-            <th mat-header-cell *matHeaderCellDef>Platform</th>
-            <td mat-cell *matCellDef="let game">{{game.platform}}</td>
-    </ng-container>
-    
+        <th mat-header-cell *matHeaderCellDef>Platform</th>
+        <td mat-cell *matCellDef="let game">{{game.platform}}</td>
+    </ng-container>  
     
     <!--Genre Column-->
     <ng-container matColumnDef="genre">
-            <th mat-header-cell *matHeaderCellDef>Genre</th>
-            <td mat-cell *matCellDef="let game">{{game.genre}}</td>
+        <th mat-header-cell *matHeaderCellDef>Genre</th>
+        <td mat-cell *matCellDef="let game">{{game.genre}}</td>
     </ng-container>
     
     <!--Rating Column-->
     <ng-container matColumnDef="rating">
-            <th mat-header-cell *matHeaderCellDef>Rating</th>
-            <td mat-cell *matCellDef="let game">{{game.rating}}</td>
+        <th mat-header-cell *matHeaderCellDef>Rating</th>
+        <td mat-cell *matCellDef="let game">{{game.rating}}</td>
     </ng-container>
     
     <!--Publisher Column-->
     <ng-container matColumnDef="publisher">
-            <th mat-header-cell *matHeaderCellDef>Publisher</th>
-            <td mat-cell *matCellDef="let game">{{game.publisher}}</td>
+        <th mat-header-cell *matHeaderCellDef>Publisher</th>
+        <td mat-cell *matCellDef="let game">{{game.publisher}}</td>
     </ng-container>
     
     <!--Release Column-->
     <ng-container matColumnDef="release">
-            <th mat-header-cell *matHeaderCellDef>Release</th>
-            <td mat-cell *matCellDef="let game">{{game.release}}</td>
+        <th mat-header-cell *matHeaderCellDef>Release</th>
+        <td mat-cell *matCellDef="let game">{{game.release}}</td>
     </ng-container>
     
     <!--Status Column-->
     <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef>Status</th>
-            <td mat-cell *matCellDef="let game">{{game.status}}</td>
+        <th mat-header-cell *matHeaderCellDef>Status</th>
+        <td mat-cell *matCellDef="let game">{{game.status}}</td>
     </ng-container>
 
-      <!-- Actions Column -->
-      <ng-container matColumnDef="actions">
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let game">
-            <button mat-button color="primary" (click)="updateGame(game)">Update</button>
+            <button mat-button color="primary" routerLink="/updateGame/{{game._id}}">Update</button>
             <button mat-button color="warn" (click)="deleteGame(game._id)">Delete</button>
         </td>  
-        </ng-container>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-
-<div class="col-md-5 col-md-offset-2">
-        <game-details
-        [game]="selectedGame"
-        [createHandler]="addGame"
-        [updateHandler]="updateGame"
-        [deleteHandler]="deleteGame">
-        </game-details>
-</div>
 </div>
