--- a/src/app/players/player-details/player-details.component.html
+++ b/src/app/players/player-details/player-details.component.html
@@ -1,11 +1,13 @@
-<div *ngIf="player" class="form">
-  <div *ngIf="player" class="row">
+<div *ngIf="player" class="container">
+<dashboard></dashboard>
+<div class="form">
+  <div class="row">
     <div class="col-md-12">
       <h2 *ngIf="player._id">Edit Player</h2>
       <h2 *ngIf="!player._id">Add Player</h2>
     </div>
   </div>
-  <div *ngIf="player" class="row">
+  <div class="row">
     <form class="col-md-12">
       <div class="form-group">
         <label for="player-name">Name</label>
@@ -45,4 +47,5 @@
       <button mat-raised-button color="warn" (click)="cancel()">Cancel</button>
     </form>
   </div>
+</div>
 </div>
