--- a/src/app/users/admin-login/admin-login.component.html
+++ b/src/app/users/admin-login/admin-login.component.html
@@ -16,7 +16,8 @@
             <input type="password" class="form-control" name="password" />
         </div>
         <button mat-raised-button color="primary" (click)="login(user)">Login</button>
-        </form>
+        <button mat-raised-button color="warn" (click)="cancel()">Cancel</button>    
+    </form>
     </div>
 </div>
 </div>
