--- a/src/app/players/player-list/player-list.component.html
+++ b/src/app/players/player-list/player-list.component.html
@@ -49,15 +49,14 @@
         <td mat-cell *matCellDef="let player">
             <button mat-button color="primary" routerLink="/updatePlayer/{{player._id}}">Update</button>
             <button mat-button color="warn" (click)="deletePlayer(player._id)">Delete</button>
-        </td>   
-            <!--<div *ngIf="User.role=='User'">
-              <button *ngIf="player.status=='Available'" mat-button color="warn" (click)="joingame(player._id)">Join Game</button>
-            </div>
+            <!-- <div *ngIf="User.role=='User'"> -->
+              <button *ngIf="player.status=='Available'" mat-button color="warn" routerLink="/joinGame/{{player._id}}">Join Game</button>
+            <!-- </div> -->
         </td>
-        <div *ngIf="User.role=='Admin'">
+        <!-- <div *ngIf="User.role=='Admin'">
           <td><button mat-button color="warn">Update</button></td>
           <td><button mat-button color="warn">Delete</button></td>
-        </div>-->
+        </div> -->
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
