--- a/src/app/games/game-details/game-details.component.html
+++ b/src/app/games/game-details/game-details.component.html
@@ -10,25 +10,28 @@
         <div class="row">
             <form class="col-md-12">
 
-                <div *ngIf="errormsg">
-                    Please enter a title.
-                </div>
 
                 <div class="form-group">
+                    <div *ngIf="errTitle">{{errTitle}}</div>
                     <label for="game-title">Title:</label>
                     <input class="form-control" name="game-title" [(ngModel)]="game.title" placeholder="Title" />
+
+                    
+
                 </div>
 
                 <div class="form-group">
+                    <div *ngIf="errPlatform">{{errPlatform}}</div>
                     <label for="game-platform">Platform:</label>
                     <input class="form-control" name="game-platform" [(ngModel)]="game.platform"
                         placeholder="Platform" />
                 </div>
 
                 <div class="form-group">
+                    <div *ngIf="errGenre">{{errGenre}}</div>
                     <label for="game-genre">Genre:</label>
                     <select class="form-control" name="game-genre" [(ngModel)]="game.genre" placeholder="Genre">
-                        <option selected="selected">Action</option>
+                        <option>Action</option>
                         <option>Action-Adventure</option>
                         <option>RPG</option>
                         <option>FPS</option>
@@ -50,22 +53,24 @@
                 </div>
 
                 <div class="form-group">
+                    <div *ngIf="errPublisher">{{errPublisher}}</div>
                     <label for="game-publisher">Publisher:</label>
                     <input class="form-control" name="game-publisher" [(ngModel)]="game.publisher"
                         placeholder="Publisher" />
                 </div>
 
                 <div class="form-group">
+                    <div *ngIf="errRelease">{{errRelease}}</div>
                     <label for="game-release">Release:</label>
                     <input class="form-control" name="game-release" [(ngModel)]="game.release" placeholder="Release" />
                 </div>
 
                 <div class="form-group">
+                    <div *ngIf="errStatus">{{errStatus}}</div>
                     <label for="game-available">Available:</label>
-                    <select class="form-control" name="game-available" [(ngModel)]="game.available"
-                        placeholder="Available">
-                        <option selected="selected">True</option>
-                        <option>False</option>
+                    <select class="form-control" name="game-status" [(ngModel)]="game.status">
+                        <option value='true'>True</option>
+                        <option value='false'>False</option>
                     </select>
                 </div>
 
