--- a/src/app/games/game-list/game-list.component.html
+++ b/src/app/games/game-list/game-list.component.html
@@ -48,7 +48,7 @@
     <!--Status Column-->
     <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
-        <td mat-cell *matCellDef="let game">{{game.status}}</td>
+        <td mat-cell *matCellDef="let game">{{game.status=='true' ? "Available": "Unavailable"}}</td>
     </ng-container>
 
     <!-- Actions Column -->
