--- a/src/app/players/player-list/player-list.component.html
+++ b/src/app/players/player-list/player-list.component.html
@@ -40,17 +40,18 @@
       <!-- Status Column -->
     <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef> Status </th>
-        <td mat-cell *matCellDef="let player"> {{player.status}} </td>
+        <td mat-cell *matCellDef="let player"> {{player.status=='1' ? "Available" : "Unavailable"}} </td>
     </ng-container>
 
       <!-- Actions Column -->
+    <div *ngIf="errName">{{err.Name}}</div>
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> Actions </th>
         <td mat-cell *matCellDef="let player">
             <button mat-button color="primary" routerLink="/updatePlayer/{{player._id}}">Update</button>
             <button mat-button color="warn" (click)="deletePlayer(player._id)">Delete</button>
             <!-- <div *ngIf="User.role=='User'"> -->
-              <button *ngIf="player.status=='Available'" mat-button color="warn" routerLink="/joinGame/{{player._id}}">Join Game</button>
+              <button *ngIf="player.status=='0'" mat-button color="warn" routerLink="/joinGame/{{player._id}}">Join Game</button>
             <!-- </div> -->
         </td>
         <!-- <div *ngIf="User.role=='Admin'">
