--- a/src/app/players/player-details/player-details.component.html
+++ b/src/app/players/player-details/player-details.component.html
@@ -49,9 +49,9 @@
             <option>Unavailable</option>
           </select>
         </div>
-        <button mat-raised-button color="primary" *ngIf="!player._id" (click)="createPlayer(player)">Add</button>
+        <button mat-raised-button color="primary" *ngIf="!player._id && !playerJoinGame" (click)="createPlayer(player)">Add</button>
         <button mat-raised-button color="primary" *ngIf="player._id && !playerJoinGame" (click)="updatePlayer(player)">Update</button>
-        <button mat-raised-button color="primary" *ngIf="joinGame" (click)="joinGame(player)">Join</button>
+        <button mat-raised-button color="primary" *ngIf="playerJoinGame" (click)="joinGame(player)">Join</button>
         <button mat-raised-button color="warn" (click)="cancel()">Cancel</button>
       </form>
     </div>
